Change App Name

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -1,7 +1,7 @@
 {
   "header": {
     "appName": "Azure IoT Remote Monitoring",
-    "companyName": "Contoso",
+    "companyName": "AI Video Intelligence",
     "profile": "Profile",
     "more": "More",
     "getStarted": "Get started",
