Changed the notion of devices to camera, hooked up the components to look in the telemetry messages correctly

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -185,7 +185,7 @@
       },
       "insights": {
         "header": "Insights from video stream",
-        "selectADevicePrompt": "Select a camera"
+        "selectCameraPrompt": "Select a camera"
       },
       "rules": {
         "header": "Alerts from rules"
